<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name" translatable="false">TakeANote</string>
    <string name="action_settings">Settings</string>
    <string name="sample_username">Sample username</string>
    <string name="sample_email">Sample@email.com</string>
    <string name="sample_description">Sample Description</string>
    <string name="add_note">Add Note</string>
    <string name="notes">Notes</string>
    <string name="sync_notes">Sync Notes</string>
    <string name="account_menu">Account</string>
    <string name="general_menu" translatable="false">General</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="sample_title">Sample Title</string>
    <string name="sample_content">Sample Content</string>
    <string name="title_activity_note_details">NoteDetails</string>
    <string name="title_activity_add_note">AddNote</string>
    <string name="untitled">Untitled</string>
    <string name="write_here">Write Your Note Here</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="forgot_password">"Forgot Password? "</string>
    <string name="register">Create New Account</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sync_now">Sync Now</string>
    <string name="log_out">Logout</string>
    <string name="login_here">Login Here</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="add_image">Add Image Note</string>
    <string name="add_paint">Add Draw Note</string>
    <string name="add_text">Add Text Note</string>
    <string name="add_audio">Add Audio Note</string>
    <string name="title_activity_paint_activity">DrawNote</string>
    <string name="new_account">New Account</string>
    <string name="title_activity_audio_activity">AddAudio</string>
    <string name="recording_started">Recording Started</string>
    <string name="recording_finished">Recording Finshed</string>
    <string name="select_image">Select Image</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="title_activity_add_image_activity">AddImage</string>
    <string name="title_activity_maps">Map</string>
    <string name="address">Address</string>
    <string name="take_photo">Take photo</string>
    <string name="add_map_note">Add Map Note</string>
    <string name="order_notes">Order Notes</string>
    <string name="order_a_z" translatable="false">A-Z</string>
    <string name="order_z_a" translatable="false">Z-A</string>
    <string name="order_type">Type</string>
    <string name="maps_opt1" translatable="false">opt1</string>
    <string name="maps_opt2" translatable="false">opt2</string>
    <string name="maps_opt3" translatable="false">opt3</string>
    <string name="maps_opt4" translatable="false">opt4</string>
    <string name="maps_opt5" translatable="false">opt5</string>
    <string name="mic_start_recording">Press the mic button   to start recording</string>
    <string name="maps_address">\Address: \</string>
    <string name="create_new_account">Create New Account</string>
    <string name="error_pwd_not_correct">The password is not correct</string>
    <string name="login_takeANote">Login to TakeANote</string>
    <string name="date_format" translatable="false">yyyyMMdd_HHmmss</string>
    <string name="suffix_jpg" translatable="false">.jpg</string>
    <string name="image_type" translatable="false">image/*</string>
    <string name="uploading">Uploading...</string>
    <string name="login_temp">Logged in With Temporary Account.</string>
    <string name="alert_sure">Are you sure?</string>
    <string name="alert_logged_temp_acc">You are logged in with Temporary Account. Loggin out will Delete All the notes.</string>
    <string name="alert_sync">Sync Notes</string>
    <string name="warging_link_Acc">Linking Existing Account Will delete all the temp notes. Create New Account To Save them.</string>
    <string name="warning_save_notes">Save Notes</string>
    <string name="warning_ok">It\'s Ok</string>
    <string name="storage_url" translatable="false">gs://takeanote-a0e9a.appspot.com/</string>
    <string name="temp_account">Temporal account</string>

    <!-- PAINT -->
    <string name="normal" translatable="false">Normal</string>
    <string name="emboss">Emboss</string>
    <string name="blur">Blur</string>
    <string name="clear">Clear</string>
    <string name="change_color">Change Color</string>
    <string name="brush_width">Change brush width</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="black">Black</string>
    <string name="blue">Blue</string>
    <string name="br5">Set brush width to 5</string>
    <string name="br10">Set brush width to 10</string>
    <string name="br20">Set brush width to 20</string>
    <string name="change_brush_width">Change brush width</string>
    <string name="eraser">Eraser</string>
    <string name="save_paint">Save note</string>

    <!-- Errors -->
    <string name="error_empty">Cannot be empty.</string>
    <string name="error_pwd_security">Password not secure enough. Must contain at least 8 characters, one uppercase letter, one lower case letter, one digit and no blank space</string>
    <string name="error_pwd_match">Passwords do not match</string>
    <string name="error_email_not_valid">Email not valid</string>
    <string name="error_email_not_match_registered">The email doesn\'t match with a registered user email</string>

    <!-- Toast -->
    <string name="toast_notes_synced">Notes are Synced</string>
    <string name="toast_coming_soon">Coming soon.</string>
    <string name="toast_empty_field">Cannot SAVE with an empty field.</string>
    <string name="toast_note_added_db">Note Added to database.</string>
    <string name="toast_note_add_failed_db">FAILED to add note to database.</string>
    <string name="toast_share_button_clicked">Share button clicked.</string>
    <string name="toast_note_saved">Note SAVED</string>
    <string name="toast_note_deleted">Note deleted.</string>
    <string name="toast_failed_delete">FAILED to delete the note.</string>
    <string name="toast_temp_notes_deleted">All Temp Notes are Deleted.</string>
    <string name="toast_temp_user_deleted">Temp user Deleted.</string>
    <string name="toast_success">Success!</string>
    <string name="toast_uploaded">Uploaded</string>
    <string name="toast_failed">Failed</string>
    <string name="toast_file_not_selected">No file selected!</string>
    <string name="toast_welcome">Welcome back </string>
    <string name="toast_error" translatable="false">Error !</string>
    <string name="toast_playing">Playing</string>
    <string name="toast_settings_menu">Settings Menu is Clicked.</string>
    <string name="toast_error_load_img">Error loading IMAGE notes!</string>
    <string name="toast_error_load_paint">Error loading PAINT notes!</string>
    <string name="toast_error_load_text">Error loading TEXT notes!</string>
    <string name="toast_error_load_audio">Error loading AUDIO notes!</string>
    <string name="toast_error_load_map">Error loading MAPS notes!</string>
    <string name="toast_paint_deleted">PaintNote deleted.</string>
    <string name="toast_failed_delete_paint">Error Deleting PAINT note!</string>
    <string name="toast_map_deleted">Map deleted.</string>
    <string name="toast_failed_delete_map">FAILED to delete the map.</string>
    <string name="toast_error_delete_img">Error Deleting IMAGE note!</string>
    <string name="toast_audio_deleted">Audio deleted.</string>
    <string name="toast_error_delete_audio">Error deleting AUDIO note.</string>
    <string name="toast_connected">You are connected</string>
    <string name="toast_nothing_changed">Nothing changed.</string>
    <string name="toast_map_updated_db">Map updated in database.</string>
    <string name="toast_failed_map_update_db">FAILED to update map to database.</string>
    <string name="toast_map_added_db">Map Added to database.</string>
    <string name="toast_failed_add_map_db">FAILED to add map to database.</string>
    <string name="toast_not_saved">ERROR NOT SAVED</string>
    <string name="toast_introduce_img">Introduce an image </string>
    <string name="toast_introduce_title">Introduce a title </string>
    <string name="audio_type" translatable="false">audios/</string>
    <string name="suffix_3gp" translatable="false">.3gp</string>
    <string name="audio_saved">Audio Saved</string>
</resources>