<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/general_menu">
        <menu>
            <item
                android:id="@+id/add_text_note"
                android:icon="@drawable/ic_text_24dp"
                android:title="@string/add_text" />
            <item
                android:id="@+id/add_drawing_note"
                android:icon="@drawable/ic_paint_24dp"
                android:title="@string/add_paint" />
            <item
                android:id="@+id/add_audio_note"
                android:icon="@drawable/ic_audio_24dp"
                android:title="@string/add_audio" />
            <item
                android:id="@+id/add_image_note"
                android:icon="@drawable/ic_image_24dp"
                android:title="@string/add_image" />
            <item
                android:id="@+id/add_map_note"
                android:icon="@drawable/ic_map_24dp"
                android:title="@string/add_map_note" />
        </menu>

    </item>
    <item android:title="@string/account_menu">
        <menu>
            <item
                android:id="@+id/create_account"
                android:icon="@drawable/ic_add_24dp"
                android:title="@string/new_account" />
            <item
                android:id="@+id/sync"
                android:icon="@drawable/ic_sync_24dp"
                android:title="@string/sync_notes" />

            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout_24dp"
                android:title="@string/log_out" />
        </menu>
    </item>
</menu>